# fox-cull

./: .gitignore  README.md  STORAGE.md  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: release.yml
docs/: index.html  robots.txt  site-data.js  sitemap.xml
scripts/: make-icon.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  commands.rs  config.rs  lib.rs  log.rs  main.rs  media.rs  thumbs.rs  video.rs
src/lib/: activity.svelte.ts  api.ts  persist.ts  settings.svelte.ts  thumbnail-loader.ts  types.ts
src/lib/components/: ActivityBar.svelte  ContextMenu.svelte  DetailsView.svelte  Loupe.svelte  SectionedGrid.svelte  Thumb.svelte  TrashPanel.svelte  TreeNode.svelte  VirtualGrid.svelte  VirtualStrip.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
